Added initial work of item upload

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -48,3 +48,9 @@ mail.body.txt=Please navigate to the URL below to activate your account:\n\n{0}/
 Pattern.register.username=Please enter a username.
 Pattern.register.email=Please enter a valid e-mail address.
 Pattern.register.password=Password must be at least 5 characters.
+
+create_item.title=Post item
+create_item.label.title=Title
+create_item.label.description=Description
+create_item.label.zipcode=Zipcode
+create_item.label.fileData=Image
