add list and delete feature

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,8 +49,8 @@ Pattern.register.username=Please enter a username.
 Pattern.register.email=Please enter a valid e-mail address.
 Pattern.register.password=Password must be at least 5 characters.
 
-create_item.title=Post item
-create_item.label.title=Title
-create_item.label.description=Description
-create_item.label.zipcode=Zipcode
-create_item.label.fileData=Image
+post_item.title=Post item
+post_item.label.title=Title
+post_item.label.description=Description
+post_item.label.zipcode=Zipcode
+post_item.label.fileData=Image
